--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -1,3 +1,39 @@
 // Place all the styles related to the articles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#post-links{
+	text-align:center;
+	margin:auto;
+}
+
+.post-link{
+	margin-right:20px;
+
+}
+
+.query-image {
+	display:inline-block;
+}
+.post-form {
+	display:inline-block;
+	text-align:center;
+	float:left;
+	margin-left:50px;
+}
+h1.article-title{
+	background:#D1C2B2;
+	padding:15px;
+	margin-bottom:40px;
+}
+.article-info{
+	display:inline-block;
+	margin:auto;
+}
+
+div.article{
+	background:#eedfcf;
+	padding-bottom:30px;
+	min-height:200px;
+
+}
+
