--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,3 +1,4 @@
+<br><br><br>
 <%= form_for @article do |f| %>
   <% if @article.errors.any? %>
   <div id="error_explanation">
@@ -11,16 +12,16 @@
   </div>
   <% end %>
   <p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.label :title, style:"text-align:center;" %><br>
+    <%= f.text_field :title, style:"margin:auto;", class:"form-control"%>
   </p>
  
   <p>
-    <%= f.label :text %><br>
-    <%= f.text_area :text %>
+    <%= f.label :text, style:"text-align:center;" %><br>
+    <%= f.text_area :text, style:"margin:auto;", class:"form-control" %>
   </p>
  
   <p>
-    <%= f.submit %>
+    <%= f.submit style:"margin:auto;", class:"btn btn-default"%>
   </p>
 <% end %>
