--- a/app/views/articles/question_list.html.erb
+++ b/app/views/articles/question_list.html.erb
@@ -3,15 +3,15 @@
 <title>Question List Item</title>
 <body bgcolor=#D1C200 vlink=#000000>
 <center>
-                <input type="image" src="pic/orangeQ.png" name="statusImg" width="120" hight="120" value="Submit" align="center">
+                <input type="image" src="pic/orangeQ.png" name="statusImg" width="70" hight="70" value="Submit" align="center">
 
-  <%= form_for upload_file.php, url: articles_path do |f| %>
+  <%= form_for @article, url: articles_path do |f| %>
 		<p>
 		  <%= f.label :title %><br>
 		  <%= f.text_field :title %>
 		</p>	 
 		<p>
-		  <%= f.submit type="image" src="pic/submit.png"%>
+		  <%= f.submit type="image" src="/assets/submit.png"%>
 		</p>
 	<% end %>
 <br><br><br><br><br><br><br><br>
